Refactoring, update alt / aria attributes

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -16,71 +16,75 @@
 			/ 70% 30%;
 		column-gap: 1em;
 	}
+}
 
-	input,
-	button {
-		padding: 0.5em 2em;
-		border-radius: var(--border-radius);
-		@include extra-large-screen {
-			padding: 0.75em 2em;
-		}
+.input,
+.button {
+	padding: 0.5em 2em;
+	border-radius: var(--border-radius);
+	@include extra-large-screen {
+		padding: 0.75em 2em;
 	}
+}
 
-	fieldset {
-		grid-area: fieldset;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		border: 0;
-		@include extra-large-screen {
-			flex-direction: row;
-			align-items: center;
-			gap: 1em;
-		}
-
-		label {
-			position: absolute;
-			top: -1000em;
-		}
-
-		input {
-			flex-basis: 100%;
-			border: 1px solid var(--clr-secondary-300);
-			outline: none;
-			transition: border var(--animation-time) ease-in-out;
-			&::placeholder {
-				color: var(--clr-secondary-300);
-			}
-			&.error {
-				border: 1px solid var(--clr-secondary-400);
-			}
-		}
+.fieldset {
+	grid-area: fieldset;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border: 0;
+	@include extra-large-screen {
+		flex-direction: row;
+		align-items: center;
+		gap: 1em;
 	}
+}
 
-	p {
-		grid-area: errorText;
-		margin: 0.5em 0 1em 0;
-		font-size: 1.2rem;
-		font-weight: var(--font-weight-600);
-		font-style: italic;
-		text-align: center;
-		color: var(--clr-secondary-400);
-		@include extra-large-screen {
-			margin: 0.5em 0 1em 3.5em;
-			text-align: left;
-		}
+.label {
+	position: absolute;
+	top: -1000em;
+}
+
+.input {
+	flex-basis: 100%;
+	border: 1px solid var(--clr-secondary-300);
+	outline: none;
+	transition: border var(--animation-time) ease-in-out;
+	&::placeholder {
+		color: var(--clr-secondary-300);
 	}
+	&.error {
+		border: 1px solid var(--clr-secondary-400);
+	}
+}
 
-	button {
-		grid-area: button;
-		margin-top: 0.75em;
-		background-color: var(--clr-primary-400);
-		border: 0;
-		box-shadow: var(--shadow);
-		color: var(--clr-secondary-100);
-		cursor: pointer;
-		@include extra-large-screen {
-			margin-top: 0;
-		}
+.errorText {
+	grid-area: errorText;
+	display: none;
+	margin: 0.5em 0 1em 0;
+	font-size: 1.2rem;
+	font-weight: var(--font-weight-600);
+	font-style: italic;
+	text-align: center;
+	color: var(--clr-secondary-400);
+	@include extra-large-screen {
+		margin: 0.5em 0 1em 3.5em;
+		text-align: left;
+	}
+	&[aria-hidden='false'] {
+		display: block;
+	}
+}
+
+.button {
+	grid-area: button;
+	margin-top: 0.75em;
+	background-color: var(--clr-primary-400);
+	border: 0;
+	box-shadow: var(--shadow);
+	color: var(--clr-secondary-100);
+	cursor: pointer;
+	@include extra-large-screen {
+		margin-top: 0;
 	}
 }
